nav bar added with responsive

--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Fitness</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>I am doing a project about Fitness</h1>
+    <header>
+        <nav class="header-container">
+            <h2 class="header-title">Fitness</h2>
+            <div class="nav-items">
+                <a class="select-default" href="">Home</a>
+            <a href="">Service</a>
+            <a href="">Contact</a>
+            <a href="">About</a>
+            </div>
+           <div class="menu-bars"><i class="fa-solid fa-bars"></i></div>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
