banner section added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,36 @@
            <div class="menu-bars"><i class="fa-solid fa-bars"></i></div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <!-- Banner Section Starts -->
+
+        <section class="banner-content">
+            <div class="banner-text-content">
+                <h2 class="banner-title">Get body in <span id="banner-inner-text">shape </span> & stay healthy</h2>
+                <p class="banner-description">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <div class="banner-btn-content">
+                    <button class="primary-btn">Join Club Now!</button>
+                    <button class="btn-download">Download App</button>
+                </div>
+            </div>
+            <div class="banner-img-content">
+                <img src="./images/Images 2.png" alt="">
+                <div class="workout-videos">
+                    <span class="banner-img-box-1">500+</span> 
+                    <span class="banner-img-box-2">Free workout Videos</span>
+                </div>
+
+                <div class="workout-videos-2">
+                    <span class="play-btn"><i class="fa-solid fa-circle-play"></i></span>
+                    <div>
+                        <span class="banner-img-box-3">350+</span> 
+                    <span class="banner-img-box-2">Video tutorial</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+          <!-- Banner Section Ends -->
+    </main>
     <footer></footer>
 </body>
 </html>
