change your habit section added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,45 @@
             </div>
         </section>
           <!-- Banner Section Ends -->
+           
+          <!-- Change Your Habit Section Starts here -->
+           <section class="change-habit-container">
+            <div class="change-habit-text-content">
+                <h3 class="section-title">Change Your Habits</h3>
+            <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="change-habit-img-container">
+                <div class="img-box">
+                    <div>
+                    <img src="./images/image 3.png" alt="">
+                    </div>
+                    <h3 class="img-title">Movement</h3>
+                    <p class="img-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="img-box">
+                    <div>
+                        <img src="./images/image 2.png" alt="">
+                    </div>
+                    <h3 class="img-title">Time</h3>
+                    <p class="img-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="img-box">
+                    <div>
+                        <img src="./images/image 4.png" alt="">
+                    </div>
+                    <h3 class="img-title">Practice</h3>
+                    <p class="img-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="img-box">
+                    <div>
+                        <img src="./images/image 5.png" alt="">
+                    </div>
+                    <h3 class="img-title">Weight Loss</h3>
+                    <p class="img-description">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+           </section>
+            <!-- Change Your Habit Section Ends here -->
     </main>
     <footer></footer>
 </body>
