run extra mile section added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
             </div>
            </section>
             <!-- Change Your Habit Section Ends here -->
+
+            <!-- Run Extra Mile Section -->
+             <section class="run-extra-mile-container">
+                <div class="run-extra-text-content">
+                    <h2 class="section-title">Run an Extra 
+                        Mile Easily</h2>
+                    <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <div class="run-extra-mile-btn-content">
+                        <button class="primary-btn">Join Now</button>
+                    </div>
+                </div>
+                <div class="run-extra-img-content">
+                    <img src="./images/run.jpg" alt="">
+                </div>
+             </section>
     </main>
     <footer></footer>
 </body>
