--- a/index.html
+++ b/index.html
@@ -104,6 +104,40 @@
                     <img src="./images/run.jpg" alt="">
                 </div>
              </section>
+
+             <!-- Training and Exercises -->
+
+             <section class="Exercise-section">
+                <h2 class="section-title">Trainings and Exercises</h2>
+                <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+
+                <div class="training-img-container">
+                 <div class="training-img-box-1">
+                    <img src="./images/exercise1.jpg" alt="">
+                    <div><p>Lorem Ipsum</p></div>
+                 </div>
+                 <div class="training-img-box-2">
+                    <img src="./images/exercise2.png" alt="">
+                    <div><p>Lorem Ipsum</p></div>
+                 </div>
+                 <div class="training-img-box-3">
+                    <img src="./images/exercise3.png" alt="">
+                    <div><p>Leg Press: Works the quadriceps and glutes</p></div>
+                 </div>
+                 <div class="training-img-box-4">
+                    <img src="./images/exercise4.png" alt="">
+                    <div><p>Leg Press: Works the quadriceps and glutes</p></div>
+                 </div>
+                 <div class="training-img-box-5">
+                    <img src="./images/exercise5.jpg" alt="">
+                    <div><p>Leg Press: Works the quadriceps and glutes</p></div>
+                 </div>
+                 <div class="training-img-box-6">
+                    <img src="./images/exercise6.jpg" alt="">
+                    <div><p>Leg Press: Works the quadriceps and glutes</p></div>
+                 </div>
+                </div>
+             </section>
     </main>
     <footer></footer>
 </body>
