added footer section

--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
              <!-- BMI Calculator -->
               <section id="bmi-calculator-section">
-                <h2 class="section-title">BMI Calculator</h2>
-                <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <h2 class="section-title bmi-title">BMI Calculator</h2>
+                <p class="section-description bmi-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
                 
                 <div class="bmi-calculator-container">
                     <div class="bmi-chart">
-                        <h3>BMI Calculator Chart</h3>
+                        <h3 class="bmi-chart-title">BMI Calculator Chart</h3>
                         <table>
                             <thead>
                                 <tr>
@@ -175,9 +175,9 @@
                         </table>
                     </div>
                     <div class="bmi-calculator">
-                        <h3>Calculate your BMI</h3>
-                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
-
+                        <h3 class="bmi-calculator-title">Calculate your BMI</h3>
+                        <p class="bmi-calculator-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+ 
                         <form >
                             <input type="text" placeholder="Height/cm">
                             <input type="text" placeholder="Weight/kg"><br>
@@ -201,7 +201,65 @@
                 </div>
 
               </section>
+
+              <!-- Meet Our Team -->
+
+              <!-- <section class="meet-out-team">
+                <h2 class="section-title">Meet Our Team</h2>
+                <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                  <div class="meet-out-team-container">
+                    <div class="team-img-box">
+                        <div><img src="./images/trainer1.png" alt=""></div>
+                    </div>
+                    <div class="team-img-box">
+                        <div><img src="./images/trainer2.png" alt=""></div>
+                    </div>
+                    <div class="team-img-box">
+                        <div><img src="./images/trainer3.png" alt=""></div>
+                    </div>
+                    <div class="team-img-box">
+                        <div><img src="./images/trainer4.png" alt=""></div>
+                    </div>
+                    <div class="team-img-box">
+                        <div><img src="./images/trainer5.png" alt=""></div>
+                    </div>
+                    <div class="team-img-box">
+                        <div><img src="./images/trainer6.png" alt=""></div>
+                    </div>
+                  </div>
+              </section> -->
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-title-content">
+                <h2 class="footer-title">Fitness</h2>
+                <p class="footer-title-description">
+                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.
+                </p>
+            </div>
+            <div class="footer-service-container">
+                <div class="footer-column-1">
+                    <h3 class="footer-column-title">Get Started</h3>
+                    <div class="footer-services">
+                     <a href="">Service</a>
+                     <a href="">Contact Us</a>
+                     <a href="">Affiliate Program</a>
+                     <a href="">About Us</a>
+                    </div>
+                </div>
+                <div class="footer-column-2">
+                    <h3 class="footer-column-title">Get Started</h3>
+                    <div class="footer-services">
+                     <a href="">Service</a>
+                     <a href="">Contact Us</a>
+                     <a href="">Affiliate Program</a>
+                     <a href="">About Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr class="footer-hr">
+        <p class="footer-reserve">All right reserved @Fitness 2024</p>
+    </footer>
 </body>
 </html>
