--- a/index.html
+++ b/index.html
@@ -204,30 +204,58 @@
 
               <!-- Meet Our Team -->
 
-              <!-- <section class="meet-out-team">
-                <h2 class="section-title">Meet Our Team</h2>
-                <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
-                  <div class="meet-out-team-container">
-                    <div class="team-img-box">
-                        <div><img src="./images/trainer1.png" alt=""></div>
+              <section class="meet-our-team">
+                <h2 class="section-title meet-our-title">Meet Our Team</h2>
+                <p class="section-description meet-our-des">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                  <div class="meet-our-team-container">
+                    <!-- box-1 -->
+                    <div class="trainer-img-box">
+                        <img src="./images/trainer1.png" alt="">
+                        <h3 class="trainer-name">Jerome Bell</h3>
+                        <p class="profession">Trainer</p>
                     </div>
-                    <div class="team-img-box">
-                        <div><img src="./images/trainer2.png" alt=""></div>
+                    <!-- box-2 -->
+
+                      <div class="trainer-img-box">
+                        <img src="./images/trainer2.png" alt="">
+                        <h3 class="trainer-name">Cameron Williamson</h3>
+                        <p class="profession">Trainer</p>
                     </div>
-                    <div class="team-img-box">
-                        <div><img src="./images/trainer3.png" alt=""></div>
+
+                    <!-- box-3 -->
+
+                    <div class="trainer-img-box">
+                        <img src="./images/trainer3.png" alt="">
+                        <h3 class="trainer-name">Darrell Steward</h3>
+                        <p class="profession">Trainer</p>
                     </div>
-                    <div class="team-img-box">
-                        <div><img src="./images/trainer4.png" alt=""></div>
+
+                    <!-- box-4 -->
+
+                    <div class="trainer-img-box">
+                        <img src="./images/trainer4.png" alt="">
+                        <h3 class="trainer-name">Dianne Russell</h3>
+                        <p class="profession">Trainer</p>
                     </div>
-                    <div class="team-img-box">
-                        <div><img src="./images/trainer5.png" alt=""></div>
+
+                    <!-- box-5 -->
+
+                    <div class="trainer-img-box">
+                        <img src="./images/trainer5.png" alt="">
+                        <h3 class="trainer-name">Cody Fisher</h3>
+                        <p class="profession">Trainer</p>
                     </div>
-                    <div class="team-img-box">
-                        <div><img src="./images/trainer6.png" alt=""></div>
+
+                    <!-- box-6 -->
+
+                    <div class="trainer-img-box">
+                        <img src="./images/trainer6.png" alt="">
+                        <h3 class="trainer-name">Theresa Webb</h3>
+                        <p class="profession">Trainer</p>
                     </div>
+
                   </div>
-              </section> -->
+              </section>
     </main>
     <footer>
         <div class="footer-container">
